k8s/api/ingress.yaml
# usuarios-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: "techchallenge"
spec:
  rules:
  - http:
      paths:
      - path: /apis
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
